# vs-2019-stringview

./: CMakeLists.txt  README.md  visualstudio.info.txt
src/: CMakeLists.txt  config.h.in  main.cpp  main.h
