CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

PROJECT(MSVC_STRING_VIEW CXX C)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(PROJECT_NAME "MSVC_STRING_VIEW")
SET(CONFIG_H "${CMAKE_BINARY_DIR}/config.h")

ADD_COMPILE_DEFINITIONS("_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_DEPRECATE")
ADD_COMPILE_DEFINITIONS("HAVE_CONFIG_H=${CONFIG_H}")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}")

CONFIGURE_FILE(
	${CMAKE_SOURCE_DIR}/src/config.h.in
	${CONFIG_H}
)

ADD_SUBDIRECTORY(src)